--- a/views/admin/edit-info.ejs
+++ b/views/admin/edit-info.ejs
@@ -15,7 +15,7 @@
                 <input type="text" name="imageUrl" id="imageUrl" value="<% if(editing) { %><%= info.imageUrl %><% } %>">
             </div>
             <div class="form-control">
-                <label for="description">Description</label><br> 
+                <label for="description">Archievement</label><br> 
                 <textarea name="description" id="description" rows="5"><% if(editing) { %><%= info.description %><% } %></textarea>
             </div>
 
